[gd_scene load_steps=6 format=3 uid="uid://b1gc7660mlhiq"]

[ext_resource type="Texture2D" uid="uid://cf1l02gihcik1" path="res://Assets/Images/Stages/Stage10/sandstorm.png" id="1_a15gv"]
[ext_resource type="Script" path="res://Scripts/StageComponents/dust_storm.gd" id="1_nm6hq"]

[sub_resource type="Animation" id="Animation_5spqt"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SandGroup:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_ko6m2"]
resource_name = "loop"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SandGroup:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(1, 1),
"points": PackedFloat32Array(0, 0, 0, 0, 0, -1920, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bw101"]
_data = {
"RESET": SubResource("Animation_5spqt"),
"loop": SubResource("Animation_ko6m2")
}

[node name="DustStorm" type="Node2D"]
process_mode = 1
z_index = 100
script = ExtResource("1_nm6hq")

[node name="DuringTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SandGroup" type="Node2D" parent="CanvasLayer"]
modulate = Color(0.54902, 0.364706, 0.188235, 1)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/SandGroup"]
modulate = Color(1, 1, 1, 0)
texture_repeat = 2
position = Vector2(1920, 540)
texture = ExtResource("1_a15gv")
region_enabled = true
region_rect = Rect2(0, 0, 3840, 1080)
region_filter_clip_enabled = true

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/SandGroup"]
modulate = Color(1, 1, 1, 0)
texture_repeat = 2
position = Vector2(1920, 215)
texture = ExtResource("1_a15gv")
region_enabled = true
region_rect = Rect2(0, 0, 3840, 1900)
region_filter_clip_enabled = true

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/SandGroup"]
modulate = Color(1, 1, 1, 0)
texture_repeat = 2
position = Vector2(1920, 892)
texture = ExtResource("1_a15gv")
region_enabled = true
region_rect = Rect2(0, 0, 3840, 1900)
region_filter_clip_enabled = true

[node name="Sprite2D4" type="Sprite2D" parent="CanvasLayer/SandGroup"]
modulate = Color(1, 1, 1, 0)
texture_repeat = 2
position = Vector2(1944, 589)
texture = ExtResource("1_a15gv")
region_enabled = true
region_rect = Rect2(0, 0, 3840, 1900)
region_filter_clip_enabled = true

[node name="Sprite2D5" type="Sprite2D" parent="CanvasLayer/SandGroup"]
modulate = Color(1, 1, 1, 0)
texture_repeat = 2
position = Vector2(1920, 851)
texture = ExtResource("1_a15gv")
region_enabled = true
region_rect = Rect2(0, 0, 3840, 1900)
region_filter_clip_enabled = true

[node name="Sprite2D6" type="Sprite2D" parent="CanvasLayer/SandGroup"]
modulate = Color(1, 1, 1, 0)
texture_repeat = 2
position = Vector2(1844, 798)
texture = ExtResource("1_a15gv")
region_enabled = true
region_rect = Rect2(0, 0, 4400, 1900)
region_filter_clip_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_bw101")
}
autoplay = "loop"

[connection signal="timeout" from="DuringTimer" to="." method="_on_during_timer_timeout"]
